--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -41,7 +41,7 @@
             <% } else { %>
 
               <li class="nav-item">
-                <a class="nav-link" href="/todo">To Do list</a>
+                <a class="nav-link" href="/song">Songs</a>
               </li>
             
               
