--- a/views/song.ejs
+++ b/views/song.ejs
@@ -1,22 +1,40 @@
-<div class="container-sm">
+<div class="container">
+<div class="row">
 <div class="col text-center bg-light p-2 border border-primary border-2">
     <h1>Enter Song</h1>
     <form method="post" action="/song/add">
-        title:<input type="text" name="title"><br>
-        album:<input type="text" name="album"><br>
-        artist:<input type="text" name="artist"><br>
-        genre:<input type="text" name="genre"><br>
+        Title:<input type="text" name="title"><br>
+        Album:<input type="text" name="album"><br>
+        Artist:<input type="text" name="artist"><br>
+        Genre:<input type="text" name="genre"><br>
         <br>
         <input type="submit" class="btn btn-lg btn-danger class="mt-5">
     </form>
-    <%= items.length %>
-    <% for (item of items){%>
-        <div class="col text-center bg-light p-2 border border-primary border-2"></divclass>
-            <%= item.title %> 
-            <%= item.album %> 
-            <%= item.author %> 
-            <%= item.genre %> 
-        </div>
-        <% }%>
 </div>
+</div>
+</div>
+<br>
+    <div class="col text-center">
+        <h1>Song List</h1>
+    </div>
+    <div>
+    <table class="table table-bordered table-striped">
+        <thead>
+            <tr>
+                <th>Title</th>
+                <th>Album</th>
+                <th>Artist</th>
+                <th>Genre</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    <% for (item of items){%>
+        <tr>
+            <td><%= item.title%></td>
+            <td><%= item.album%></td>
+            <td><%= item.artist%></td>
+            <td><%= item.genre%></td>
+        </tr>
+        <% }%>
+    </table>
 </div>
