--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,7 +10,41 @@
         song to create potential playlists
     </p>
     
-   
+    <br>
+    <form method="post" action="/songs/byTitle">
+        Show Songs By Artist:
+        <input type="text" name="title" 
+               placeholder="Title">
+        <input type="submit">
+    </form>
+    <br>
+
+    <br>
+    <form method="post" action="/songs/byAlbum">
+        Show Songs By Artist:
+        <input type="text" name="album" 
+               placeholder="Album Name">
+        <input type="submit">
+    </form>
+    <br>
+
+    <br>
+    <form method="post" action="/songs/byArtist">
+        Show Songs By Artist:
+        <input type="text" name="artist" 
+               placeholder="Artist's Name">
+        <input type="submit">
+    </form>
+    <br>
+
+    <br>
+    <form method="post" action="/songs/byGenre">
+        Show Songs By Artist:
+        <input type="text" name="genre" 
+               placeholder="Genre">
+        <input type="submit">
+    </form>
+    <br>
     
        
    
