--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,7 +12,7 @@
     
     <br>
     <form method="post" action="/songs/byTitle">
-        Show Songs By Artist:
+        Show Songs By Title:
         <input type="text" name="title" 
                placeholder="Title">
         <input type="submit">
@@ -21,7 +21,7 @@
 
     <br>
     <form method="post" action="/songs/byAlbum">
-        Show Songs By Artist:
+        Show Songs By Album:
         <input type="text" name="album" 
                placeholder="Album Name">
         <input type="submit">
@@ -39,7 +39,7 @@
 
     <br>
     <form method="post" action="/songs/byGenre">
-        Show Songs By Artist:
+        Show Songs By Genre:
         <input type="text" name="genre" 
                placeholder="Genre">
         <input type="submit">
