--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,9 +1,7 @@
 
-<h1>
-  About -- Developers
-</h1>
-<ul>
-  <li>Tim Hickey</li>
-  <li>Jiaxin Li</li>
-</ul>
+<div class= "col text-center alig bg-primary w-25" style="border:thick solid black;">
+<h1>Developers<h1>
+</div>
+<br>
+<ul><h3>Ben Beizer</h3></ul>
 
