--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,49 +1,65 @@
 
 
-    <div class="jumbotron">
+    <div class="jumbotron text-center">
         <h1>Song App </h1>
         <p></p>
     </div>
 
-    <p class="p-3 m-3 border border-primary bg-light">
-        This App is designed for users to input songs that they like to create a list of song and then query from that list of
-        song to create potential playlists
+    <p class="col text-center p-3 m-3 border border-primary bg-light">
+        This App is designed for users to input songs that they like in the "Song" tab.
+        <br>
+        On the home page the user can query for songs based on their title, album, artist, and genre
+        </p>
     </p>
+
+    <div class="container" style="display: flex;align-items: center;justify-content: center;">
+        <div class="bg-primary m-2 p-5 text-center w-50" style="border: black thick solid;">
+        <img src="images/musicalnote.jpg" width="25%">
+        </div>
+    </div>
     
     <br>
+    <div class="container" style="display: flex;align-items: center;justify-content: center;">
     <form method="post" action="/songs/byTitle">
         Show Songs By Title:
         <input type="text" name="title" 
                placeholder="Title">
         <input type="submit">
     </form>
+    </div>
     <br>
 
     <br>
+    <div class="container" style="display: flex;align-items: center;justify-content: center;">
     <form method="post" action="/songs/byAlbum">
         Show Songs By Album:
         <input type="text" name="album" 
                placeholder="Album Name">
         <input type="submit">
     </form>
+    </div>
     <br>
 
     <br>
+    <div class="container" style="display: flex;align-items: center;justify-content: center;">
     <form method="post" action="/songs/byArtist">
         Show Songs By Artist:
         <input type="text" name="artist" 
                placeholder="Artist's Name">
         <input type="submit">
     </form>
+    </div>
     <br>
 
     <br>
+    <div class="container" style="display: flex;align-items: center;justify-content: center;">
     <form method="post" action="/songs/byGenre">
         Show Songs By Genre:
         <input type="text" name="genre" 
                placeholder="Genre">
         <input type="submit">
     </form>
+    </div>>
     <br>
     
        
